<resources>
    <string name="app_name">Suitcase</string>
    <string name="email">Email</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="username">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="or">OR</string>
    <string name="logout">Logout</string>
    <string name="title_activity_onboard">OnboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>