<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/loginLL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_marginTop="-50dp"
            app:srcCompat="@drawable/logo2" />

        <TextView
            android:id="@+id/loginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/baseColor"
            android:fontFamily="@font/nunitosans"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/welcome_back"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

    <!--    Login credentials Input fields   -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/email"
            android:layout_marginBottom="10dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxCornerRadiusTopStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/password"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="8dp"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--Login button-->
    <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/loginPasswordET"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/primaryColor"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/login"
            android:textSize="19sp"
            android:textStyle="bold"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/loginRNtv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Register Now"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingLeft="10dp"
                android:textColor="@color/secondaryColor"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/greyAccent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/or"
                android:textColor="@color/black"

                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/greyAccent"/>

        </LinearLayout>

    <!--Signin with google button -->
        <LinearLayout
            android:id="@+id/googleSignInbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:background="@drawable/rounded_edittext_bg"
            android:elevation="@dimen/cardview_default_elevation"
            >

            <ImageView

                android:layout_width="80dp"
                android:layout_height="60dp"
                android:paddingLeft="10dp"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                app:srcCompat="@drawable/google_logo"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="25dp"
                android:paddingTop="18dp"
                android:paddingBottom="18dp"
                android:text="@string/sign_in_with_google"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
    <!-- Dim background -->
    <View
        android:id="@+id/loginDimBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone" />

    <!-- Centered progress bar -->
    <ProgressBar
        android:id="@+id/loginProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>